--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ html.html
 </head>
 <body>
 <canvas id="canvas"></canvas>
-<script src = "finemage/test.hithub.io/script.js"></script>
+<script src = "script.js"></script>
 
 
 </body>
