--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
-
 <html>
-
+<html>
 <head>
-
+<meta charset="utf-8" />
+<title>ball test</title>
+<style>
+canvas{background: black; display: block; margin: 0 auto;}
+</style>
 </head>
 <body>
-<canvas id="canvas"></canvas>
-<script src = "script.js"></script>
+<canvas id="myCanvas" width="480" height="320"></canvas>
+<script>
+    let canvas = document.getElementById("myCanvas");
+    let ctx = canvas.getContext("2d");
+    let x = Math.floor((Math.random() * (canvas.width-39))+40);
+    let y = Math.floor((Math.random() * (canvas.height-39))+40);
+    let dx = 2;
+    let dy = -2;
+    let ballRadius = 10;
 
+    function drawBall() {
+        ctx.beginPath();
+        ctx.arc(x, y, ballRadius, 0, Math.PI*2);
+        ctx.fillStyle = "white";
+        ctx.fill();
+        ctx.closePath();
+    }
+
+    function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawBall();
+
+        if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+            dx = -dx;
+        }
+
+        if(y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+            dy = -dy;
+        }
+
+        x += dx;
+        y += dy;
+    }
+
+    setInterval(draw, 1);
+
+
+</script>
 
 </body>
-</html> 
+</html>
