--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ canvas{background: black; display: block; margin: 0 auto;}
 </style>
 </head>
 <body>
-    <h3>페이지 내부 mp3파일 재생</h3>
-    <p>audio 태그를 이용한 audio 재생 - autoplay</p>
-    <audio autoplay controls> <source src="노동요.mp3" type="audio/mp3"> </audio>
+    <div size="3" align="center"><h3>페이지 내부 mp3파일 재생</h3>
+    <div size="3" align="center"><p>audio 태그를 이용한 audio 재생 - autoplay</p>
+    <div size="3" align="center"><audio autoplay controls> <source src="노동요.mp3" type="audio/mp3"> </audio>
 
 <canvas id="myCanvas" width="1200" height="800"></canvas>
 <script>
