--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ canvas{background: black; display: block; margin: 0 auto;}
 <body>
     <div size="3" align="center"><h3>페이지 내부 mp3파일 재생</h3>
     <div size="3" align="center"><p>audio 태그를 이용한 audio 재생 - autoplay</p>
-    <div size="3" align="center"><audio autoplay controls> <source src="노동요.mp3" type="audio/mp3"> </audio>
+    <div size="3" align="center"><audio loop controls> <source src="노동요.mp3" type="audio/mp3"> </audio>
 
 <canvas id="myCanvas" width="1200" height="800"></canvas>
 <script>
