--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>ball test</title>
+<title>fine_mage's notepad</title>
 <style>
 canvas{background: black; display: block; margin: 0 auto;}
 </style>
