--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ canvas{background: black; display: block; margin: 0 auto;}
 </head>
 <body>
     <div size="3" align="center"><h3>정신 사나운 페이지 만들기</h3>
-    <div size="3" align="center"><p>audio 노동요 무한반복</p>
+    <div size="3" align="center"><p>노동요 무한반복</p>
     <div size="3" align="center"><audio autoplay loop controls> <source src="노동요.mp3" type="audio/mp3"> </audio>
 
 <canvas id="myCanvas" width="1200" height="800"></canvas>
