--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ canvas{background: black; display: block; margin: 0 auto;}
     <div size="1" align="center"><h3>정신 사나운 페이지 만들기</h3>
     <div size="1" align="center"><p>노동요 무한반복</p>
     <div size="1" align="center"><audio autoplay loop controls> <source src="노동요.mp3" type="audio/mp3"> </audio>
-    <div size="1" align="center"><button id="button">공 개수 늘리기</button>
-    document.getElementById("button").addEventListener('click',draw);
+    <div size="1" align="center"><button id="button" onclick="darwBall();" >공 개수 늘리기</button>
 
 <canvas id="myCanvas" width="1200" height="800"></canvas>
 <script>
