--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ canvas{background: black; display: block; margin: 0 auto;}
     function drawBall() {
         ctx.beginPath();
         ctx.arc(x, y, ballRadius, 0, Math.PI*2);
-        ctx.fillStyle = "white";
+        ctx.fillStyle = "#" + Math.round(Math.random() * 0xffffff).toString(16)
         ctx.fill();
         ctx.closePath();
     }
@@ -34,15 +34,12 @@ canvas{background: black; display: block; margin: 0 auto;}
     function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawBall();
-
         if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
             dx = -dx;
         }
-
         if(y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
             dy = -dy;
         }
-
         x += dx;
         y += dy;
     }
