--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <meta charset="utf-8" />
 <title>fine_mage's notepad</title>
 <style>
-canvas{background: black; display: block; margin: 0 auto;}
+    background-image : url('source.jpg');
+    background-size : cover;
+    background-repeat : no-repeat;
+    canvas{background: black; display: block; margin: 0 auto;}
 </style>
 </head>
 <body>
